Add git log graph aliases.
- https://stackoverflow.com/questions/2421011/output-of-git-branch-in-tree-like-fashion
- https://stackoverflow.com/questions/1064361/unable-to-show-a-git-tree-in-terminal/1064431#1064431

--- a/.gitconfig
+++ b/.gitconfig
@@ -86,6 +86,8 @@
     lnc = log --pretty=format:"%h\\ %s\\ [%cn]"
     fl = log -u
     filelog = log -u
+    lg = git log --graph --pretty=oneline --abbrev-commit
+    lgb = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset%n' --abbrev-commit --date=relative --branches
     # }}}
     # diff {{{
     d = diff --word-diff
