Fix typo for git lg alias

--- a/.gitconfig
+++ b/.gitconfig
@@ -86,7 +86,7 @@
     lnc = log --pretty=format:"%h\\ %s\\ [%cn]"
     fl = log -u
     filelog = log -u
-    lg = git log --graph --pretty=oneline --abbrev-commit
+    lg = log --graph --pretty=oneline --abbrev-commit
     lgb = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset%n' --abbrev-commit --date=relative --branches
     # }}}
     # diff {{{
