--- a/.gitconfig
+++ b/.gitconfig
@@ -11,7 +11,7 @@
 [core]
     editor = vim
     pager=less -x4
-    excludesfile = /Users/glew4/.gitignore
+    excludesfile = ~/.gitignore
     abbrev = 7
 
 #}}}
