--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,7 +2,7 @@
 set-window-option -g mode-keys vi
 
 # https://stackoverflow.com/questions/10543684/how-can-i-clear-scrollback-buffer-in-tmux
-bind -n C-k clear-history
+bind -n C-k clear-history \; display-message "scrollback buffer cleared"
 
 # https://til.hashrocket.com/posts/d4d3c1fea6-quickly-edit-and-reload-tmux-configuration
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
