--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,8 @@
 # https://sanctum.geek.nz/arabesque/vi-mode-in-tmux/
 set-window-option -g mode-keys vi
 
-# https://stackoverflow.com/questions/10543684/how-can-i-clear-scrollback-buffer-in-tmux
-bind -n C-k clear-history \; display-message "scrollback buffer cleared"
+set-option -g history-limit 100000
+bind -n C-k send-keys -R C-c \; clear-history \; display-message "scrollback buffer cleared"
 
 # https://til.hashrocket.com/posts/d4d3c1fea6-quickly-edit-and-reload-tmux-configuration
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
