.gitconfig: git lg9

--- a/.gitconfig
+++ b/.gitconfig
@@ -89,6 +89,7 @@
     fl = log -u
     filelog = log -u
     lg = log --graph --pretty=oneline --abbrev-commit
+    lg9 = log --graph --pretty=oneline --abbrev-commit -9
     lg25 = log --graph --pretty=oneline --abbrev-commit -25
     lgb = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset%n' --abbrev-commit --date=relative --branches
     # }}}
