tmux: renumber-windows on

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,3 +6,6 @@ bind -n C-k send-keys -R C-c \; clear-history \; display-message "scrollback buf
 
 # https://til.hashrocket.com/posts/d4d3c1fea6-quickly-edit-and-reload-tmux-configuration
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
+
+# https://unix.stackexchange.com/questions/21742/renumbering-windows-in-tmux
+set-option -g renumber-windows on
